--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vendor/zstd"]
-	path = vendor/zstd
+[submodule "libs/src/zstd"]
+	path = libs/src/zstd
 	url = https://github.com/facebook/zstd.git
